--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="navtop">
             <ul class="nav">
-                <li class="nav1">home</li>
+               <a href="contact.html" target="_blank"> <li class="nav1">home</li></a>
                 <li class="nav2">login</li>
                 <li class="nav3">register</li>
                 <li class="nav4">contact</li>
